--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -12,7 +12,7 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $rclone-manager-primary: mat.define-palette(mat.$indigo-palette);
-$rclone-manager-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$rclone-manager-accent: mat.define-palette(mat.$blue-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $rclone-manager-warn: mat.define-palette(mat.$red-palette);
@@ -55,14 +55,6 @@ $rclone-manager-theme: mat.define-light-theme(
   --add-button-hover: #939090;
   --theme-border: #dbdbdb;
   --theme-border-hover: #777;
-  --selected-border: #007bff;
-  --light-theme-color: white;
-  --dark-theme-color: black;
-  --green: #5CB85C;
-  --orange: #F89F24;
-  --red: #FF0000;
-  --blue: #2196F3;
-  --purple: #9747FF;
 }
 
 /* 🌙 Dark Theme */
@@ -85,14 +77,16 @@ $rclone-manager-theme: mat.define-light-theme(
   --add-button-hover: #666;
   --theme-border: #555;
   --theme-border-hover: #888;
-  --selected-border: #007bff;
-  --light-theme-color: white;
-  --dark-theme-color: black;
+
+
 
 }
 
 :root {
   /* Default colors */
+  --light-theme-color: white;
+  --dark-theme-color: black;
+  --selected-border: #007bff;
   --green: #5CB85C;
   --orange: #F89F24;
   --red: #FF0000;
