--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -260,7 +260,7 @@
       width: 100%;
       flex-direction: column;
       align-items: center;
-      gap: 20px;
+      margin-block: 20px;
       flex: 1;
 
       .info-card {
