--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,3 +12,28 @@
     justify-content: center;
     align-items: center;
 }
+.menu {
+    position: absolute;
+    display: none;
+    background: white;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    padding: 5px;
+  }
+  
+  .menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .menu ul li {
+    padding: 10px;
+    cursor: pointer;
+  }
+  
+  .menu ul li:hover {
+    background: #f0f0f0;
+  }
+  
