--- a/src/app/modals/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.scss
+++ b/src/app/modals/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.scss
@@ -40,6 +40,7 @@
     .shortcut-table {
       width: 100%;
       border-collapse: collapse;
+      background-color: var(--secondary-background);
 
       th {
         text-align: left;
@@ -55,6 +56,8 @@
       }
 
       .shortcut-key {
+        color: var(--app-text-color);
+        border-bottom-color: var(--border-color);
         font-weight: bold;
         font-family: monospace;
         text-align: left;
@@ -65,6 +68,8 @@
       .shortcut-desc {
         text-align: left;
         width: 60%;
+        color: var(--secodary-text-color);
+        border-bottom-color: var(--border-color);
       }
     }
   }
